examples/good/13-02-nested-functions.elina
var x: int = 0;

fn outerFunction(): void {

  fn innerFunction1(): void {
    var x: int = 1;

    fn innerFunction2(): void {
      x = 2;

      fn innerFunction3(): void {
        var x: int = 3;
      }

      innerFunction3();
      return;
    }

    innerFunction2();

    if (x == 2) {
      printString("First test passed");
    }
  }

  innerFunction1();
}

fn main(): void {
  outerFunction();
  if (x == 0) {
    printString("Second test passed");
  }
}