examples/bad/assign-wrong-type.elina
fn f(): bool {
  return true;
}

fn main(): void {
  var x: string;
  x = f();
}